--- a/src/index.css
+++ b/src/index.css
@@ -49,8 +49,7 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   line-height: 1.5;
   font-size: 0.875rem;
   background-color: var(--Very-Light-Grayish-Blue);
